@@ -19,6 +19,9 @@
 *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
 ***************************************************************************/
 NSC_WRAPPERS_MAIN();
+NSC_WRAPPERS_CLI();
+NSC_WRAPPERS_CHANNELS();
+
 //#include <config.h>
 #include <strEx.h>
 #include <utils.h>
@@ -30,7 +33,7 @@ NSC_WRAPPERS_MAIN();
 #include <scripts/functions.hpp>
 
 
-class LUAScript : public nscapi::impl::simple_command_handler, public nscapi::impl::simple_plugin {
+class LUAScript : public nscapi::impl::simple_command_handler, public nscapi::impl::simple_command_line_exec, public nscapi::impl::simple_submission_handler, public nscapi::impl::simple_plugin {
 private:
 
 	boost::shared_ptr<lua_wrappers::lua_registry> registry;
@@ -63,9 +66,14 @@ public:
 
 	bool hasCommandHandler();
 	bool hasMessageHandler();
+	bool hasNotificationHandler() { return true; }
 	boost::optional<boost::filesystem::wpath> find_file(std::wstring file);
 	bool loadScript(std::wstring alias, std::wstring file);
 	NSCAPI::nagiosReturn handleCommand(const std::wstring &target, const std::wstring &command, std::list<std::wstring> &arguments, std::wstring &message, std::wstring &perf);
+	NSCAPI::nagiosReturn commandLineExec(const std::wstring &command, std::list<std::wstring> &arguments, std::wstring &result);
+	NSCAPI::nagiosReturn handleSimpleNotification(const std::wstring channel, const std::wstring source, const std::wstring command, NSCAPI::nagiosReturn code, std::wstring msg, std::wstring perf);
+
+
 	//NSCAPI::nagiosReturn RunLUA(const unsigned int argLen, wchar_t **char_args, std::wstring &message, std::wstring &perf);
 	//NSCAPI::nagiosReturn extract_return(Lua_State &L, int arg_count,  std::wstring &message, std::wstring &perf);
 
